[fix] air being added